fix: resolve broken line break in inline code (#237)

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -60,7 +60,7 @@
     
     prose-code:rounded prose-code:bg-skin-card 
     prose-code:bg-opacity-75 prose-code:p-1 
-    prose-code:before:!content-[''] prose-code:after:!content-['']
+    prose-code:before:!content-none prose-code:after:!content-none
     prose-ol:!text-skin-base 
     prose-ul:overflow-x-clip prose-ul:!text-skin-base prose-li:marker:!text-skin-accent
     prose-table:text-skin-base prose-th:border
